tools/flowc/tests/errors/error39.flow
import material/material_ui;

Struct(
	var : Transform<bool>
);

main () {
	manager = makeMaterialManager([]);

	var1 = make(true);
	var2 = Struct(fselect(var1, FLift(\v -> !v)));

	var = make(!getValue(var2.var)); // crash: var2.var is Transform, which getValue should not work on
	// var = make(!fgetValue(var2.var)); // 

	timer(200, \-> reverseBehaviour(var1));

	mrender(manager, false, MSelect(var, \v -> MText("value = " + b2s(v), [])));
}
